# mapeditor

./: Cargo.toml  README.md
src/: datcontainer.rs  helpers.rs  main.rs  map.rs  renderer.rs  rootwindow.rs  spriteatlas.rs  spritecontainer.rs
src/opentibia/: binaryfile.rs  itemtypes.rs  map.rs  mod.rs
src/shaders/: 140.frag  330.frag  330.geom  330.vert
