[package]
name = "mapeditor"
version = "0.1.0"
authors = ["Kornelijus Survila <kornholijo@gmail.com>"]
edition = "2018"

[[bin]]
name = "mapeditor"
path = "src/main.rs"

[dependencies]
byteorder = "1"
cgmath = "0.17"
clock_ticks = "0.1.1"
encoding = "0.2"
glium = "0.27"
image = "0.23"
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
toml = "0.5"
serde = "1"
serde_derive = "1"
lru-cache = "0.1.2"
vec_map = "0.8"
