[package]
name = "mapeditor"
version = "0.1.0"
authors = ["Kornelijus Survila <kornholijo@gmail.com>"]
edition = "2018"

[[bin]]
name = "mapeditor"
path = "src/main.rs"

[dependencies]
byteorder = "1"
cgmath = "0.17"
encoding = "0.2"
glium = "0.27"
image = { version = "0.23", default-features = false, features = ["png"] }
num = "0.3"
num-derive = "0.3"
num-traits = "0.2"
toml = "0.5"
serde = { version = "1", features = ["derive"] }
lru-cache = "0.1.2"
vec_map = "0.8"
